# polars-tryout

./: Cargo.toml
src/: main.rs
