[package]
name = "polars-tryout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
mimalloc = { version = "0.1.29", default-features = false }
modulo = "0.1.2"
polars = { version = "0.22.6", features = ["lazy", "dtype-categorical", "dtype-i16", "dtype-i8", "dtype-u8", "dtype-u16"] }
