[package]
name = "polars-tryout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.29", default-features = false }
polars = { git = "https://github.com/pola-rs/polars.git", features = ["lazy"] }
